@@ -1,3 +1,6 @@
+2011-07-09 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Feature #25466: Added feature to send newsletter to multiple lists.
+
 2011-06-13 Jacob Rasmussen <jacob@lightbulb.dk>
 	* Bug #13086: Tables needs to use the sorting field
 
